@@ -1,3 +1,7 @@
+2002-01-24  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* tests/elisp.test: More new tests for the Elisp nil value.
+
 2002-01-22  Neil Jerram  <neil@ossau.uklinux.net>
 
 	* Makefile.am (SCM_TESTS): Added elisp.test.
